hcm, hybrid and on-premise updated

--- a/Seamless Hybrid Solutions/seamless-hybrid.html
+++ b/Seamless Hybrid Solutions/seamless-hybrid.html
@@ -52,7 +52,7 @@ The future of HCM is in the cloud, but your organization’s journey to the clou
 </div>
 </article></div>
 <div class="col-md-4 col-sm-4">
-<div class="this-section" style="background-color: #f1f1eb;border-left: #d40030 3px solid;padding: 15px">
+<div class="this-section" style="background-color: #f1f1eb;border-left: #d40030 3px solid;padding: 15px; font-family: EurostileLTPro-Demi;">
 <div style="color:#d40130;font-weight: bold;font-size: 15px;padding-bottom:12px;">In This Section</div>
 <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#hybrid-solutions">Seamless Hybrid Solutions</a></div>
 <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#cloud-transition">Cloud Transition Scenarios</a></div>
