added cloud and rapid-deployment and a few updates

--- a/Human Capital Management/hcm.html
+++ b/Human Capital Management/hcm.html
@@ -1,27 +1,27 @@
-<div class="row">
-    <div class="col-md-3 col-sm-3 side-nav">
-        <div class="stacked-sub">
-            <div id="accordion" class="panel-group">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management" style="color:#d40130;">Human Capital Management</a>
-                        </h4>
-                    </div>
-                </div>
-                <div id="collapseOne" class="panel-collapse">
-                    <div class="panel-body" style="background-color: transparent;">
-                        <ul>
-                            <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/on-premise">On Premise</a></li>
-                            <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/seamless-hybrid-solutions" style="color:#333;">Hybrid</a></li>
-                            <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/cloud-solutions">Cloud</a></li>
-                            <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/rapid-deployment-solutions">Rapid Deployment</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="row" style="margin: 0px 20px;">
+<div class="col-md-3 col-sm-3 side-nav">
+<div class="stacked-sub">
+<div id="accordion" class="panel-group">
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4 class="panel-title">
+<a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management" style="color:#d40130; font-weight:bold;">Human Capital Management</a>
+</h4>
+</div>
+</div>
+<div id="collapseOne" class="panel-collapse">
+<div class="panel-body" style="background-color: transparent;">
+<ul>
+<li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/on-premise">On Premise</a></li>
+<li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/seamless-hybrid-solutions">Hybrid</a></li>
+<li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/cloud-solutions">Cloud</a></li>
+<li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/rapid-deployment-solutions">Rapid Deployment</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
     <div class="col-md-9 col-sm-9 mobile-section-margin-top intro-module">
         <div class="row">
             <div class="col-md-12 col-sm-12 mobile-section-margin-top intro-module">
@@ -55,7 +55,7 @@
                 </article>
             </div>
             <div class="col-md-4 col-sm-4">
-                <div class="this-section" style="background-color: #f1f1eb;border-left: #d40030 3px solid;padding: 15px; font-family: EurostileLTPro-Demi;">
+                <div class="this-section" style="background-color: #f1f1eb;border-left: #d40030 3px solid;padding: 20px; font-family: EurostileLTPro-Demi;">
                     <div style="color: #d40130;font-weight: bold;font-size: 15px;padding-bottom:12px;">In This Section</div>
                     <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#our-capabilities">Our Capabilities</a></div>
                     <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#why-itelligence">Why itelligence for HCM?</a></div>
