added links and 'seamless hybrid solutions' to left panel

--- a/Cloud/cloud.html
+++ b/Cloud/cloud.html
@@ -13,7 +13,7 @@
 <div class="panel-body" style="background-color: transparent;">
 <ul>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/on-premise">On Premise</a></li>
-<li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/seamless-hybrid-solutions">Hybrid</a></li>
+<li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/seamless-hybrid-solutions">Seamless Hybrid Solutions</a></li>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/cloud-solutions" style="color:#333;">Cloud</a></li>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/rapid-deployment-solutions">Rapid Deployment</a></li>
 </ul>
@@ -32,7 +32,7 @@
 								<h2 id="hybrid-solutions" style="font-weight: bold">Cloud</h2>
 							</div>
 							<div class="hc-icon">
-								<i class="fa fa-users"></i>
+								<i class="fa fa-cloud"></i>
 							</div>
 						</div>
 						<div class="clearfix"></div>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="col-xs-10">
-				<div style="color:#d40130; font-weight: bold; font-size: 15px; padding-bottom:12px;"><a href="">Core HR in the Cloud: Live Employee Central Demo</a></div>
+				<div style="color:#d40130; font-weight:bold; font-size:15px; padding-bottom:12px; font-family: EurostileLTPro-Demi;"><a href="">Core HR in the Cloud: Live Employee Central Demo</a></div>
 			</div>
 		</div>
 		<div class="row" style="margin-bottom:40px;">
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 			<div class="col-xs-10">
-				<div style="color:#d40130; font-weight: bold; font-size: 15px; padding-bottom:12px;"><a href="">SuccessFactors Talent Management Demo</a></div>
+				<div style="color:#d40130; font-weight: bold; font-size: 15px; padding-bottom:12px; font-family: EurostileLTPro-Demi;"><a href="">SuccessFactors Talent Management Demo</a></div>
 			</div>
 		</div>
 		<br>
