added color to bg on left panel and linked text

--- a/Rapid-Deployment/rapid-deployment.html
+++ b/Rapid-Deployment/rapid-deployment.html
@@ -10,7 +10,7 @@
 </div>
 </div>
 <div id="collapseOne" class="panel-collapse">
-<div class="panel-body" style="background-color: transparent;">
+<div class="panel-body">
 <ul>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/on-premise">On Premise</a></li>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/seamless-hybrid-solutions">Seamless Hybrid Solutions</a></li>
