--- a/Seamless Hybrid Solutions/seamless-hybrid.html
+++ b/Seamless Hybrid Solutions/seamless-hybrid.html
@@ -10,7 +10,7 @@
 </div>
 </div>
 <div id="collapseOne" class="panel-collapse">
-<div class="panel-body" style="background-color: transparent;">
+<div class="panel-body">
 <ul>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/on-premise">On Premise</a></li>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/seamless-hybrid-solutions" style="color:#333;">Seamless Hybrid Solutions</a></li>
@@ -135,7 +135,7 @@ Leverage existing investments, connect with delivered integrations.
                 </div>
                 <div class="row" style="margin-bottom:0px;">
                     <div class="col-sm-12">  
-                        <button style="border: 2px solid #d40130;padding: 4px 34px 4px 29px;color:#d40130;background-color: #fbfbf9" class="center-block text center"><a href="mailto:hcm@itelligencegroup.com?Subject=More%20Info%20Please" target="_top"><b style="font-size:18px;">&gt; Request More Info</b></a></button>
+                        <button style="border: 2px solid #d40130;padding: 7px 34px 4px 29px;color:#d40130;background-color: #fbfbf9" class="center-block text center"><a href="mailto:hcm@itelligencegroup.com?Subject=More%20Info%20Please" target="_top"><b style="font-size:18px; font-family: EurostileLTPro-Demi;">&gt; Request More Info</b></a></button>
                     </div>
                 </div>
             </article>
