--- a/Cloud/cloud.html
+++ b/Cloud/cloud.html
@@ -10,7 +10,7 @@
 </div>
 </div>
 <div id="collapseOne" class="panel-collapse">
-<div class="panel-body" style="background-color: transparent;">
+<div class="panel-body">
 <ul>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/on-premise">On Premise</a></li>
 <li><a href="http://itelligencegroup.com/us/what-we-do/what-we-offer/human-capital-management/seamless-hybrid-solutions">Seamless Hybrid Solutions</a></li>
@@ -88,7 +88,7 @@
 							<div class="clearfix"></div>
 							<div class="row">
 								<div class="col-sm-12">  
-									<button style="border: 2px solid #d40130;padding: 4px 34px 4px 29px;color: #d40130;background-color: #fbfbf9" class="center-block text-center"><a href="mailto:hcm@itelligencegroup.com?Subject=More%20Info%20Please" target="_top"><b style="font-size:18px;">&gt; Request More Information</b></a></button>
+									<button style="border: 2px solid #d40130;padding: 7px 34px 4px 29px;color: #d40130;background-color: #fbfbf9" class="center-block text-center"><a href="mailto:hcm@itelligencegroup.com?Subject=More%20Info%20Please" target="_top"><b style="font-size:18px; font-family:EurostileLTPro-Demi;">&gt; Request More Information</b></a></button>
 								</div>
 							</div>
 						</div>
