spell check and edits

--- a/Rapid-Deployment/rapid-deployment.html
+++ b/Rapid-Deployment/rapid-deployment.html
@@ -52,7 +52,7 @@
                         <h5 style="color:#d40130;">Benefits</h5>
                         <div style="padding-left:20px;">
                             <p>
-                            <span style="font-weight:bold; font-size: 16px; padding-right:5px;">&#8226;</span> Pre-delivered best paractices, tools and content <br>
+                            <span style="font-weight:bold; font-size: 16px; padding-right:5px;">&#8226;</span> Pre-delivered best practices, tools and content <br>
                             <span style="font-weight:bold; font-size: 16px; padding-right:5px;">&#8226;</span> FIxed implementation timeline and pricing <br>
                             <span style="font-weight:bold; font-size: 16px; padding-right:5px;">&#8226;</span> Remote delivery model resulting in limited deployment costs <br>
                             <span style="font-weight:bold; font-size: 16px; padding-right:5px;">&#8226;</span> Easy to add additional functionality, flexibility to expand
@@ -62,17 +62,17 @@
                     </div>
                 </div>
             </article>
-        </div>
-        <div class="col-md-4 col-sm-4">
-            <div class="this-section" style="background-color: #f1f1eb;border-left: #d40030 3px solid;padding: 20px; font-family: EurostileLTPro-Demi;">
-                <div style="color:#d40130;font-weight: bold;font-size: 15px;padding-bottom:12px;">In This Section</div>
-                <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#rapid-deployment">Rapid Deployment Solutions</a></div>
-                <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#demos">Demos</a></div>
-                <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#our-successes">Our Successes</a></div>
-                <div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:5px;"><a href="#contact-us">Contact Us</a></div>
-            </div>
-        </div>
-    </div> 
+</div>
+<div class="col-md-4 col-sm-4">
+<div class="this-section" style="background-color: #f1f1eb;border-left: #d40030 3px solid;padding: 20px; font-family: EurostileLTPro-Demi;">
+<div style="color:#d40130;font-weight: bold;font-size: 15px;padding-bottom:12px;">In This Section</div>
+<div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#rapid-deployment">Rapid Deployment Solutions</a></div>
+<div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#demos">Demos</a></div>
+<div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:12px;"><a href="#our-successes">Our Successes</a></div>
+<div style="color: #86807d;font-size: 14px;font-weight: bold;padding-bottom:0px;"><a href="#contact-us">Contact Us</a></div>
+</div>
+</div>
+</div> 
     <br>
     <div id="demos" class="row solution-box solution-iconless solution-wwo-box panel" style="background-color: #fbfbf9; margin-bottom:40px; padding:15px;">
         <div class="col-md-12 col-sm-12">
@@ -80,7 +80,7 @@
                 <div class="row">
                     <div class="col-sm-9">
                         <div class="row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-12" style="padding-top: 15px;">
                                 <h3 style="font-weight: bold;font-size: 19pt; color:#939598;">centralize<span style="color:#d40130;">.it</span></h3>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                             </a>
                         </div>
                         <div class="row">
-                            <h4 class="text-center" style="color:#d40130;">centrlize.it<br>Demo</h4>
+                            <h4 class="text-center" style="color:#d40130;">centralize.it<br>Demo</h4>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                             </div>
                             <div class="row">
                                 <a href="http://itelligencegroup.com/us/news-and-insights/local-blog/?tax=human-capital-management"><h5 class="text-center" style="color:#d40130;">Blogs</h5>
-                                <p class="text-center">View Latest Post</p>
+                                <p class="text-center">View Latest Posts</p>
                                 </a>
                             </div>
                         </div>
