requested edits to on-premis, rapid-dev, hybrid

--- a/Rapid-Deployment/rapid-deployment.html
+++ b/Rapid-Deployment/rapid-deployment.html
@@ -86,20 +86,19 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <p><span style="font-weight: bold;">Powered by SuccessFactors Employee Central, </span>centralize.it provides an enterprise-grade HR solution that enables comprehensive support and the ability to manage any type of global workforce. <br><span style="color:#d40130; font-family: EurostileLTPro-Demi; font-size:15px;">Learn more...</span></p>
+                                <p><span style="font-weight: bold;">Powered by SuccessFactors Employee Central, </span>centralize.it provides an enterprise-grade HR solution that enables comprehensive support and the ability to manage any type of global workforce. <br><a href="https://www.youtube.com/watch?v=drZe9Fc5gKU&index=6&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D"><span style="color:#d40130; font-family: EurostileLTPro-Demi; font-size:15px;">Learn more...</span></a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-3">
                         <div class="row" style="margin-top:20px;">
-                            <a href="">
+                            <a href="https://www.youtube.com/watch?v=drZe9Fc5gKU&index=6&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D">
                                 <div class="hc-icon text-center">
                                     <i style="color: #86807d;font-size: 60px;" class="fa fa-film"></i>
                                 </div>
                             </a>
                         </div>
-                        <div class="row">
-                            <h4 class="text-center" style="color:#d40130;">centralize.it<br>Demo</h4>
+                        <div class="row text-center" style="color:#d40130; font-family: EurostileLTPro-Demi; font-size: 18px; margin: 0px 0px 20px 0px;"><a href="https://www.youtube.com/watch?v=drZe9Fc5gKU&index=6&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D">centralize.it<br>Demo</a>
                         </div>
                     </div>
                 </div>
@@ -112,20 +111,19 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <p><span style="font-weight: bold;">Powered by SuccessFactors Performance &amp; Goals, </span> perform&amp;align.it provides a solution that enables managers to align employee activities with organizational strategy and monitor performance - providing employees with continuous, meaningful feedback and coaching.<br><span style="color:#d40130; font-family: EurostileLTPro-Demi; font-size:15px;">Learn more...</span></p>
+                                <p><span style="font-weight: bold;">Powered by SuccessFactors Performance &amp; Goals, </span> perform&amp;align.it provides a solution that enables managers to align employee activities with organizational strategy and monitor performance - providing employees with continuous, meaningful feedback and coaching.<br><a href="https://www.youtube.com/watch?v=Hji5yte-gEI&index=5&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D"><span style="color:#d40130; font-family: EurostileLTPro-Demi; font-size:15px;">Learn more...</span></a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-3">
                         <div class="row" style="margin-top:20px;">
-                            <a href="">
+                            <a href="https://www.youtube.com/watch?v=Hji5yte-gEI&index=5&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D">
                                 <div class="hc-icon text-center">
                                     <i style="color: #86807d;font-size: 60px;" class="fa fa-film"></i>
                                 </div>
                             </a>
                         </div>
-                        <div class="row">
-                            <h4 class="text-center" style="color:#d40130;">perform&amp;align.it<br>Demo</h4>
+                        <div class="row text-center" style="color:#d40130; font-family: EurostileLTPro-Demi; font-size: 18px; margin: 0px 0px 20px 0px;"><a href="https://www.youtube.com/watch?v=Hji5yte-gEI&index=5&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D">perform&amp;align.it<br>Demo</a>
                         </div>
                     </div>
                 </div>
@@ -138,20 +136,19 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <p><span style="font-weight: bold;">Powered by SuccessFactors Recruiting Management, </span>recruit.it you create an objective and collaborative talent acquisition process that’s simple and effective, transforming the hiring process into a more strategic and measurable part of a complete talent strategy.<br><span style="color:#d40130; font-family: EurostileLTPro-Demi; font-size:15px;">Learn more...</span></p>
+                                <p><span style="font-weight: bold;">Powered by SuccessFactors Recruiting Management, </span>recruit.it you create an objective and collaborative talent acquisition process that’s simple and effective, transforming the hiring process into a more strategic and measurable part of a complete talent strategy.<br><a href="https://www.youtube.com/watch?v=50mVBgT4a1o&index=4&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D"><span style="color:#d40130; font-family: EurostileLTPro-Demi; font-size:15px;">Learn more...</span></a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-3">
                         <div class="row" style="margin-top:20px;">
-                            <a href="">
+                            <a href="https://www.youtube.com/watch?v=50mVBgT4a1o&index=4&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D">
                                 <div class="hc-icon text-center">
                                     <i style="color: #86807d;font-size: 60px;" class="fa fa-film"></i>
                                 </div>
                             </a>
                         </div>
-                        <div class="row">
-                            <h4 class="text-center" style="color:#d40130;">recruit.it<br>Demo</h4>
+                        <div class="row text-center" style="color:#d40130; font-family: EurostileLTPro-Demi; font-size: 18px; margin: 0px 0px 20px 0px;"><a href="https://www.youtube.com/watch?v=50mVBgT4a1o&index=4&list=PLVVY_7qysTEYgzFtkyAnokaL7s3vyKy7D">recruit.it<br>Demo</a>
                         </div>
                     </div>
                 </div>
