more edits and links

--- a/Cloud/cloud.html
+++ b/Cloud/cloud.html
@@ -45,9 +45,9 @@
 				<article class="article-style vertical-article solution-border solution-wwo-border">
 					<div class="row mobile-row">
 						<div class="col-md-12 col-sm-12">
-							<h4 style="font-weight: bold; font-size: 15pt;">SuccessFactors - Cloud Based Human Capital Management (HCM)</h4>
+							<h4 style="font-weight: bold; font-size: 15pt;">SuccessFactors - Cloud-Based Human Capital Management (HCM)</h4>
 							<p>
-							Your people are your biggest investment, and you need them to capture new market opportunities to stay ahead of the competition in today’s workforce. To achieve this, your team strategy needs to be aligned, optimized and accelerated. The cloud-based SuccessFactors Suite bridges the gap between strategy and execution, utilizing HCM solutions for talent management, core HR, collaboration and workforce analytics. SuccessFactors provides a complete, recruit-to-retire solution across all talent processes. Delivered via the cloud, each solution can be used independently, or all together to provide one cohesive HRIS solution.
+							Your people are your biggest investment, and you need them to capture new market opportunities to stay ahead of the competition in today’s workforce. To achieve this, your team strategy needs to be aligned, optimized and accelerated. The cloud-based SuccessFactors Suite bridges the gap between strategy and execution, utilizing HCM solutions for talent management, core HR, collaboration and workforce analytics. SuccessFactors provides a complete, recruit-to-retire solution across all talent processes. Delivered via the cloud, each solution can be used independently or all together to provide one cohesive HRIS solution.
 							</p>
 							<div class="clearfix"></div>
 						</div>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="col-xs-10">
-				<div style="color:#d40130; font-weight:bold; font-size:15px; padding-bottom:12px; font-family: EurostileLTPro-Demi;"><a href="">Core HR in the Cloud: Live Employee Central Demo</a></div>
+				<div style="color:#d40130; font-weight:bold; font-size:15px; padding-bottom:12px; font-family: EurostileLTPro-Demi;"><a href="http://us.itelligencegroup.com/Core-HR-In-The-Cloud-Employee-Central-Demo.html">Core HR in the Cloud: Live Employee Central Demo</a></div>
 			</div>
 		</div>
 		<div class="row" style="margin-bottom:40px;">
