--- a/Human Capital Management/hcm.html
+++ b/Human Capital Management/hcm.html
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="col-xs-9">
                                      <h5 class="text-left" style="color:#d40130">Our Expertise</h5>
-                                    <p class="text-left">Successfully implemented HCM for some of the largest and complex organizations.</p>
+                                    <p class="text-left">Successfully implemented HCM for some of the largest and most complex organizations.</p>
                                 </div>
                             </div>
                         </div>
