--- a/Cloud/cloud.html
+++ b/Cloud/cloud.html
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 			<div class="col-xs-10">
-				<div style="color:#d40130; font-weight: bold; font-size: 15px; padding-bottom:12px; font-family: EurostileLTPro-Demi;"><a href="">SuccessFactors Talent Management Demo</a></div>
+				<div style="color:#d40130; font-weight: bold; font-size: 15px; padding-bottom:12px; font-family: EurostileLTPro-Demi;"><a href="http://us.itelligencegroup.com/Comprehensive-Demo-SuccessFactors-Talent-Solutions.html">SuccessFactors Talent Management Demo</a></div>
 			</div>
 		</div>
 		<br>
