fixed buttons for firefox

--- a/Seamless Hybrid Solutions/seamless-hybrid.html
+++ b/Seamless Hybrid Solutions/seamless-hybrid.html
@@ -139,7 +139,7 @@ As SAP’s most experienced hybrid implementation partner, we have the it factor
             </div>
             <div class="row" style="margin-bottom:0px;">
                 <div class="col-sm-12">  
-                    <button style="border: 2px solid #d40130;padding: 7px 34px 4px 29px;color:#d40130;background-color: #fbfbf9" class="center-block text center"><a href="mailto:hcm@itelligencegroup.com?Subject=More%20Info%20Please" target="_top"><b style="font-size:17px; font-family: EurostileLTPro-Demi;">&gt; Request More Info</b></a></button>
+                    <div style="margin:auto; width:250px; border: 2px solid #d40130;padding: 7px 30px 5px; color:#d40130;background-color: #fbfbf9" class="center-block text center"><a href="mailto:hcm@itelligencegroup.com?Subject=More%20Info%20Please" target="_top"><span style="font-size:17px; font-family: EurostileLTPro-Demi;">&gt; Request More Info</span></a></div>
                 </div>
             </div>
         </article>
