HANA content edits

--- a/HANA/HANA.html
+++ b/HANA/HANA.html
@@ -36,7 +36,7 @@
 <div class="intro-icon-margin">
 <div class="heading-container hc-h2">
 <div class="hc-heading" style="width:80%;">
-<div id="hybrid-solutions" style="font-weight: bold; font-family: EurostileLTPro-Demi;color: #40a391;font-size: 26px;">Evolving toward real-time business with SAP HANA</div>
+<div id="hybrid-solutions" style="font-weight: bold; font-family: EurostileLTPro-Demi;color: #40a391;font-size: 26px;">Evolving Toward Real-Time Business with SAP HANA</div>
 </div>
 <div class="hc-icon" style="width:20%;">
 <i class="fa fa-tachometer"></i>
@@ -235,7 +235,7 @@
             </div>
             <div class="evo-approach-blurb" style="padding-bottom:20px;">
                 <div class="row">
-                    <h3 id="real-time" style="font-weight: bold; font-size: 19pt;">Making the Case for Real-Time Business - Why Evolving Your Business to Real Time Is a Competitive Advantage</h3>
+                    <h3 id="real-time" style="font-weight: bold; font-size: 19pt;">Making the Case for Real-Time Business - Why Evolving Your Business to Real Time is a Competitive Advantage</h3>
                 </div>
                 <div class="row">
                     <p>The era of real-time business has rewritten the rules for success. To thrive in this new environment, enterprises need the ability to act and react virtually instantaneously based on in-the-moment information. The challenges and opportunities of this transformational approach to business are the subject of the White Paper.
